# entrega_taller

app/: Dockerfile  README.md  app.py  model.keras  preprocessor.joblib  pyproject.toml
parte0/: README.md  pyproject.toml  train_model.py
