[project]
name = "parte0"
version = "0.1.0"
description = "Código para entrenamiento y serialización de modelo Keras para el dataset Titanic."
authors = [
    { name = "f0.perezcanales", email = "f0.perezcanales@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11" # Esto especifica la versión mínima de Python para el proyecto

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # Aquí se define la versión de Python para las dependencias
joblib = ">=1.5.1,<2.0.0"
pandas = ">=2.3.0,<3.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
tensorflow = "2.15.0"
tensorflow-io-gcs-filesystem = { version = "*", python = "<3.12" } # Manteniendo tu configuración

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
